@@ -114,7 +114,8 @@ gpsutil_disp(waypoint *wpt)
 	}
 
 	fprintf(file_out, "W  %-6.6s %c%08.5f %c%011.5f %s %5d %-40.40s %5e  %s\n",
-		wpt->shortname,
+                global_opts.synthesize_shortnames ?
+                        mkshort(wpt->description) : wpt->shortname,
 		lat < 0.0 ? 'S' : 'N',
 		fabs(lat),
 		lon < 0.0 ? 'W' : 'E',
@@ -140,7 +141,7 @@ fprintf(file_out,
 "U  LAT LON DM\n"
 "\n"
 "H  IDNT   LATITUDE    LONGITUDE    DATE      TIME     ALT   DESCRIPTION                              PROXIMITY     SYMBOL ;waypts\n");
-
+	setshort_length(6);
 	waypt_disp_all(gpsutil_disp);
 }
 
